# search-engine-tool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  basic_commands.sh  pyproject.toml  requirements.txt
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml
data/: custom_sitemap.xml  index.json  sitemap.xml
docs/: algorithm_analysis.md
src/: crawler.py  indexer.py  logger.py  main.py  search.py
tests/: conftest.py  test_crawler.py  test_indexer.py  test_logger.py  test_main.py  test_search.py
