[project]
name = "search-engine-tool"
version = "0.1.0"
authors = [
    { name = "Andreas Bazigos", email = "sc222ab@leeds.ac.uk" },
]
description = "A CLI search engine tool to crawl, index, and query https://quotes.toscrape.com."
readme = "README.md"
requires-python = ">=3.12.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

license-files = ["LICEN[CS]E*"]
license = "GPL-3.0-or-later"
keywords = ["web-crawler", "web-scraper", "indexing", "", "banking"]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "requests>=2.33.0",
    "typer>=0.24.1",
]

[project.urls]
repository = "https://github.com/scAB1001/search-engine-tool"

[project.scripts]
search-engine = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "types-requests>=2.32.4.20260324",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests",
    "slow: Tests that take > 5 seconds",
    "smoke: Quick smoke tests for CI",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "ARG", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "B", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.run]
branch = true
source = ["src/"]
omit = [
    "tests/*",
    "data/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = [
    "def __repr__",                 # Ignore debug representations
    "if TYPE_CHECKING:",            # Ignore type-hinting imports
    "if __name__ == .__main__.:",   # Ignore standard script execution blocks
]

[tool.coverage.html]
directory = "htmlcov"
